--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,13 @@ yarn-error.log*
 # Prisma generated client and native engines (do not commit)
 lib/generated/prisma/
 node_modules/@prisma/
+
+# Next.js build output and caches
+.next/
+
+# Playwright reports and test artifacts
+playwright-report/
+test-results/
+
+# Local databases
+*.db
