--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^6.13.0",
     "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.53.0",
+    "@vercel/blob": "^1.1.1",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.537.0",
